<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".activity.EditProfile">

    <RelativeLayout
        android:id="@+id/topheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/reddd">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_10"
            android:src="@drawable/ic_backwhite"
            app:tint="@color/colorWhite" />

        <TextView
            android:id="@+id/txt_pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_back"
            android:text="@string/edit_profile"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_20" />

        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back"
            app:tint="@color/colorWhite"
            android:visibility="gone" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topheader">

        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <!--<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imgon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wave" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgon"
                    android:src="@drawable/ic_wave" />
            </RelativeLayout>-->

            <EditText
                android:id="@+id/editfulllname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_bg"
                android:hint="Full Name"
                android:paddingStart="10dp"
                android:textSize="@dimen/font_16" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_gender"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/editfulllname"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/font_16"
                app:ms_background_color="@color/leku_soft_grey" />

            <TextView
                android:id="@+id/txt_dob"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/spinner_gender"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_bg"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/dob"
                android:textSize="@dimen/font_16" />

            <EditText
                android:id="@+id/editmob"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/txt_dob"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/mobilenumber"
                android:inputType="number"
                android:maxLength="10"
                android:paddingLeft="10dp"
                android:textSize="@dimen/font_16" />

            <EditText
                android:id="@+id/editemail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/editmob"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textSize="@dimen/font_16" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                android:layout_below="@+id/editemail"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/font_16"
                app:ms_background_color="@color/leku_soft_grey" />


            <EditText
                android:id="@+id/editpincontact"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/spinner_city"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/pincode"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="10dp"
                android:textSize="@dimen/font_16" />

            <LinearLayout
                android:id="@+id/linctext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editpincontact"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txt_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spinner_gender"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="Experience"
                    android:textColor="@color/nav_black"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/txt_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spinner_gender"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="Select Month"
                    android:textColor="@color/nav_black"
                    android:textSize="@dimen/font_16" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/linctext"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner_year"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_45"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/font_16"
                    app:ms_background_color="@color/leku_soft_grey" />

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner_month"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/font_16"
                    app:ms_background_color="@color/leku_soft_grey" />
            </LinearLayout>

            <EditText
                android:id="@+id/editaddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/linc"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_bg"
                android:hint="Enter Your Address Here"
                android:paddingLeft="10dp"
                android:textSize="@dimen/font_16" />

            <!-- <com.jaredrummler.materialspinner.MaterialSpinner
                 android:id="@+id/spinner_experttype"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_45"
                 android:visibility="gone"
                 android:layout_below="@+id/editaddress"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
                 android:textSize="@dimen/font_16"
                 app:ms_background_color="@color/leku_soft_grey" />-->

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_qualification"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                android:layout_below="@+id/editaddress"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/font_16"

                app:ms_background_color="@color/leku_soft_grey" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner_qualification"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:background="@drawable/red_button_background"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/bar"
                style="@style/AVLoadingIndicatorView.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:indicatorColor="@color/colorGreen"
                app:indicatorName="BallClipRotatePulseIndicator" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

